--- a/style.css
+++ b/style.css
@@ -5,8 +5,12 @@ html {
     scroll-behavior: smooth;
 }
 body {
-    margin: 20px;
+    margin: 0px;
     padding: 0px;
+}
+header {
+    padding-left: 40px;
+    padding-top: 10px;
 }
 .navBar {
     background-color: #fad13e;
@@ -34,10 +38,10 @@ body {
 }
 .text {
     font-family: Arial, Helvetica, sans-serif;
-    padding: 20px;
+    padding: 40px;
 }
-canvas {
-    width: max-content;
+.exemplars {
+    width: 60%;
     height: auto;
     border: 5px solid black;
 }
