--- a/style.css
+++ b/style.css
@@ -41,7 +41,8 @@ header {
     padding: 40px;
 }
 .exemplars {
-    width: 60%;
+    max-width: 60%;
+    max-height: 50%;
     height: auto;
     border: 5px solid black;
 }
