--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ html {
     margin: 0px;
     padding: 0px;
     scroll-behavior: smooth;
+    background-image: url(Old-Scona_1600x1100.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
 }
 body {
     margin: 0px;
@@ -11,12 +15,27 @@ body {
 header {
     padding-left: 40px;
     padding-top: 10px;
+    padding-bottom: 1px;
+    margin: 0;
+    background-color: ivory;
+    bottom: 0;
+}
+.logo {
+    display: inline-block;
+}
+.mainHeading {
+    display: block;
+    text-align: center;
+    font-family: Helvetica, Arial, sans-serif;
+    color: #166936;
 }
 .navBar {
     background-color: #fad13e;
     font-family: Helvetica, Arial, sans-serif;
     position: sticky;
     overflow: hidden;
+    margin-top: 0;
+    border-bottom: 5px solid #166936;
     top: 0;
 }
 .navBar a{
@@ -39,6 +58,8 @@ header {
 .text {
     font-family: Arial, Helvetica, sans-serif;
     padding: 40px;
+    margin: 1% 10%;
+    background-color:ivory;
 }
 .exemplars {
     /* max-width: 60%; */
