--- a/style.css
+++ b/style.css
@@ -62,8 +62,8 @@ header {
     background-color:ivory;
 }
 .exemplars {
-    /* max-width: 60%; */
-    /* max-height: 50%; */
-    width: auto;
+    max-width: 60%;
+    max-height: 50%;
+    /* width: auto; */
     border: 5px solid black;
 }
