--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
+    background-size: cover;
 }
 body {
     margin: 0px;
@@ -35,6 +36,7 @@ header {
     position: sticky;
     overflow: hidden;
     margin-top: 0;
+    margin-bottom: 0;
     border-bottom: 5px solid #166936;
     top: 0;
 }
@@ -58,12 +60,12 @@ header {
 .text {
     font-family: Arial, Helvetica, sans-serif;
     padding: 40px;
-    margin: 1% 10%;
+    margin: 0% 10%;
     background-color:ivory;
 }
 .exemplars {
-    max-width: 60%;
-    max-height: 50%;
+    max-width: 80%;
+    max-height: 60%;
     /* width: auto; */
     border: 5px solid black;
 }
