--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ header {
     padding-left: 40px;
     padding-top: 10px;
     padding-bottom: 1px;
-    margin: 0;
-    background-color: ivory;
+    /*background-color: ivory; */
     bottom: 0;
+    margin: 0% 15%;
 }
 .logo {
     display: inline-block;
@@ -35,8 +35,7 @@ header {
     font-family: Helvetica, Arial, sans-serif;
     position: sticky;
     overflow: hidden;
-    margin-top: 0;
-    margin-bottom: 0;
+    margin: 0% 15%;
     border-bottom: 5px solid #166936;
     top: 0;
 }
@@ -60,12 +59,12 @@ header {
 .text {
     font-family: Arial, Helvetica, sans-serif;
     padding: 40px;
-    margin: 0% 10%;
+    margin: 0% 15%;
     background-color:ivory;
 }
 .exemplars {
     max-width: 80%;
-    max-height: 60%;
+    max-height: 70%;
     /* width: auto; */
     border: 5px solid black;
 }
