Remove some debugging features, more styling

--- a/style.css
+++ b/style.css
@@ -66,5 +66,5 @@ header {
     max-width: 100%;
     max-height: 70%;
     /* width: auto; */
-    border: 5px solid black;
+    border: 5px solid #701424;
 }
